--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10,7 +10,7 @@ body { }
    Header
    ========================================================================== */
 
-.banner11 { }
+.banner { }
 
 
 
